Se aplico  font-weight a la letra del header

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
     <script
@@ -18,7 +18,7 @@
     <title>Document</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header header__icon--line">
       <a href="#">
         <img
           class="header__logo"
@@ -26,7 +26,7 @@
           alt="logo_HNV"
         />
       </a>
-      <nav class="header__nav header__icon--line ">
+      <nav class="header__nav">
         <ul id="header__ul" class="header__ul">
           <li class="header__li">
             <a class="header__a" href="">Inicio</a>
@@ -41,7 +41,7 @@
           </li>
 
           <li class="header__li">
-            <a class="header__a " href="">Contactenos</a>
+            <a class="header__a" href="">Contactenos</a>
           </li>
         </ul>
       </nav>
@@ -49,12 +49,12 @@
         <img src="/assets/imagenes/hamburger-icon.png" alt="" />
       </div>
 
-      <div class="header__icon-div   ">
-        <i class="fa-brands header__icon  fa-square-facebook"></i>
-        <i class="fa-brands header__icon  fa-square-instagram"></i>
-        <i class="fa-brands header__icon  fa-youtube"></i>
-        <i class="fa-brands header__icon  fa-linkedin"></i>
-        <i class="fa-brands header__icon  fa-tiktok"></i>
+      <div class="header__icon-div">
+        <i class="fa-brands header__icon fa-square-facebook"></i>
+        <i class="fa-brands header__icon fa-square-instagram"></i>
+        <i class="fa-brands header__icon fa-youtube"></i>
+        <i class="fa-brands header__icon fa-linkedin"></i>
+        <i class="fa-brands header__icon fa-tiktok"></i>
       </div>
     </header>
 
