Se aplico efecto hover al menu

--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
       <nav class="header__nav">
         <ul id="header__ul" class="header__ul">
           <li class="header__li">
-            <a class="header__a" href="">Inicio</a>
+            <a class="header__a header__a--efec" href="">Inicio</a>
           </li>
 
           <li class="header__li">
-            <a class="header__a" href="">Nosotros</a>
+            <a class="header__a header__a--efec" href="">Nosotros</a>
           </li>
 
           <li class="header__li">
-            <a class="header__a" href="">Proyectos</a>
+            <a class="header__a header__a--efec" href="">Proyectos</a>
           </li>
 
           <li class="header__li">
-            <a class="header__a" href="">Contactenos</a>
+            <a class="header__a header__a--efec" href="">Contactenos</a>
           </li>
         </ul>
       </nav>
@@ -50,11 +50,15 @@
       </div>
 
       <div class="header__icon-div">
-        <i class="fa-brands header__icon fa-square-facebook"></i>
-        <i class="fa-brands header__icon fa-square-instagram"></i>
-        <i class="fa-brands header__icon fa-youtube"></i>
-        <i class="fa-brands header__icon fa-linkedin"></i>
-        <i class="fa-brands header__icon fa-tiktok"></i>
+        <i
+          class="fa-brands header__icon header__icon--efect fa-square-facebook"
+        ></i>
+        <i
+          class="fa-brands header__icon header__icon--efect fa-square-instagram"
+        ></i>
+        <i class="fa-brands header__icon header__icon--efect fa-youtube"></i>
+        <i class="fa-brands header__icon header__icon--efect fa-linkedin"></i>
+        <i class="fa-brands header__icon header__icon--efect fa-tiktok"></i>
       </div>
     </header>
 
