Se programo los items para cerrar el menu  al dar clic en cada uno de ellos

--- a/index.html
+++ b/index.html
@@ -29,19 +29,25 @@
       <nav class="header__nav">
         <ul id="header__ul" class="header__ul">
           <li class="header__li">
-            <a class="header__a header__a--efec" href="">Inicio</a>
+            <a class="header__a header__a--efec" href="#inicio"
+              >Inicio</a
+            >
           </li>
 
           <li class="header__li">
-            <a class="header__a header__a--efec" href="">Nosotros</a>
+            <a  class="header__a header__a--efec" href="#nosotros"
+              >Nosotros</a
+            >
           </li>
 
           <li class="header__li">
-            <a class="header__a header__a--efec" href="">Proyectos</a>
+            <a class="header__a header__a--efec" href="#proyectos">Proyectos</a>
           </li>
 
           <li class="header__li">
-            <a class="header__a header__a--efec" href="">Contactenos</a>
+            <a class="header__a header__a--efec" href="#contactenos"
+              >Contactenos</a
+            >
           </li>
         </ul>
       </nav>
@@ -62,7 +68,12 @@
       </div>
     </header>
 
-    <main></main>
+    <main>
+      <section id="inicio" class="inicio"></section>
+      <section id="nosotros" class="nosotros"></section>
+      <section id="proyectos" class="proyectos"></section>
+      <section id="contactenos" class="contactenos"></section>
+    </main>
 
     <footer></footer>
 
