Se avanzo en la section inicio

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- header section starts  -->
     <header class="header header__icon--line">
       <a href="#">
         <img
@@ -29,15 +30,11 @@
       <nav class="header__nav">
         <ul id="header__ul" class="header__ul">
           <li class="header__li">
-            <a class="header__a header__a--efec" href="#inicio"
-              >Inicio</a
-            >
+            <a class="header__a header__a--efec" href="#inicio">Inicio</a>
           </li>
 
           <li class="header__li">
-            <a  class="header__a header__a--efec" href="#nosotros"
-              >Nosotros</a
-            >
+            <a class="header__a header__a--efec" href="#nosotros">Nosotros</a>
           </li>
 
           <li class="header__li">
@@ -67,9 +64,22 @@
         <i class="fa-brands header__icon header__icon--efect fa-tiktok"></i>
       </div>
     </header>
+    <!-- header section ends -->
 
-    <main>
-      <section id="inicio" class="inicio"></section>
+    <main class="main">
+      <!-- home section starts  -->
+      <section id="inicio" class="inicio inicio--gradien">
+        <div class="inicio__content">
+          <h2 class="inicio__h2">
+            I.T.C Hernando navia varón, 50 años sembrando futuro
+          </h2>
+          <p class="inicio__p">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores
+            numquam distinctio libero quas voluptatibus.
+          </p>
+        </div>
+      </section>
+      <!-- home section ends -->
       <section id="nosotros" class="nosotros"></section>
       <section id="proyectos" class="proyectos"></section>
       <section id="contactenos" class="contactenos"></section>
