Se cambio la imagen del menu por icono de fontawesome

--- a/index.html
+++ b/index.html
@@ -48,8 +48,11 @@
           </li>
         </ul>
       </nav>
-      <div id="header__toggle-menu" class="header__toggle-menu">
+      <!-- <div id="header__toggle-menu" class="header__toggle-menu">
         <img src="/assets/imagenes/hamburger-icon.png" alt="" />
+      </div> -->
+      <div id="header__toggle-menu" class="header__toggle-menu header__toggle-menu--efec">
+        <i class="fa-solid fa-bars"></i>
       </div>
 
       <div class="header__icon-div">
