se modifico el con tenido del header y se aplico al nav

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
   <body>
     <!-- header section starts  -->
     <header class="header header__icon--line">
-      <a href="#">
-        <img
-          class="header__logo"
-          src="/assets/imagenes/logo.png"
-          alt="logo_HNV"
-        />
-      </a>
       <nav class="header__nav">
+        <a href="#">
+          <img
+            class="header__logo"
+            src="/assets/imagenes/logo.png"
+            alt="logo_HNV"
+          />
+        </a>
         <ul id="header__ul" class="header__ul">
           <li class="header__li">
             <a class="header__a header__a--efec" href="#inicio">Inicio</a>
@@ -47,25 +47,28 @@
             >
           </li>
         </ul>
+        <div
+          id="header__toggle-menu"
+          class="header__toggle-menu header__toggle-menu--efec"
+        >
+          <i class="fa-solid fa-bars"></i>
+        </div>
+
+        <div class="header__icon-div">
+          <i
+            class="fa-brands header__icon header__icon--efect fa-square-facebook"
+          ></i>
+          <i
+            class="fa-brands header__icon header__icon--efect fa-square-instagram"
+          ></i>
+          <i class="fa-brands header__icon header__icon--efect fa-youtube"></i>
+          <i class="fa-brands header__icon header__icon--efect fa-linkedin"></i>
+          <i class="fa-brands header__icon header__icon--efect fa-tiktok"></i>
+        </div>
       </nav>
       <!-- <div id="header__toggle-menu" class="header__toggle-menu">
         <img src="/assets/imagenes/hamburger-icon.png" alt="" />
       </div> -->
-      <div id="header__toggle-menu" class="header__toggle-menu header__toggle-menu--efec">
-        <i class="fa-solid fa-bars"></i>
-      </div>
-
-      <div class="header__icon-div">
-        <i
-          class="fa-brands header__icon header__icon--efect fa-square-facebook"
-        ></i>
-        <i
-          class="fa-brands header__icon header__icon--efect fa-square-instagram"
-        ></i>
-        <i class="fa-brands header__icon header__icon--efect fa-youtube"></i>
-        <i class="fa-brands header__icon header__icon--efect fa-linkedin"></i>
-        <i class="fa-brands header__icon header__icon--efect fa-tiktok"></i>
-      </div>
     </header>
     <!-- header section ends -->
 
