Se aplico --padding-Content

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
           <i
             class="fa-brands header__icon header__icon--efect fa-square-instagram"
           ></i>
-          <i class="fa-brands header__icon header__icon--efect fa-youtube"></i>
+          <!-- <i class="fa-brands header__icon header__icon--efect fa-youtube"></i> -->
           <i class="fa-brands header__icon header__icon--efect fa-linkedin"></i>
-          <i class="fa-brands header__icon header__icon--efect fa-tiktok"></i>
+          <!-- <i class="fa-brands header__icon header__icon--efect fa-tiktok"></i> -->
         </div>
       </nav>
       <!-- <div id="header__toggle-menu" class="header__toggle-menu">
