Se ajuto social netword a siapoaitivos moviles

--- a/index.html
+++ b/index.html
@@ -47,12 +47,6 @@
             >
           </li>
         </ul>
-        <div
-          id="header__toggle-menu"
-          class="header__toggle-menu header__toggle-menu--efec"
-        >
-          <i class="fa-solid fa-bars"></i>
-        </div>
 
         <div class="header__icon-div">
           <i
@@ -64,6 +58,10 @@
           <!-- <i class="fa-brands header__icon header__icon--efect fa-youtube"></i> -->
           <i class="fa-brands header__icon header__icon--efect fa-linkedin"></i>
           <!-- <i class="fa-brands header__icon header__icon--efect fa-tiktok"></i> -->
+          <i
+            id="header__toggle-menu"
+            class="header__toggle-menu fa-solid fa-bars"
+          ></i>
         </div>
       </nav>
       <!-- <div id="header__toggle-menu" class="header__toggle-menu">
