Se culmino header

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!-- header section starts  -->
-    <header class="header header__icon--line">
+    <header class="header header--line">
       <nav class="header__nav">
         <a href="#">
           <img
