Se avanzo en la section nosotros

--- a/index.html
+++ b/index.html
@@ -64,9 +64,6 @@
           ></i>
         </div>
       </nav>
-      <!-- <div id="header__toggle-menu" class="header__toggle-menu">
-        <img src="/assets/imagenes/hamburger-icon.png" alt="" />
-      </div> -->
     </header>
     <!-- header section ends -->
 
@@ -74,9 +71,9 @@
       <!-- home section starts  -->
       <section id="inicio" class="inicio inicio--gradien">
         <div class="inicio__content">
-          <h2 class="inicio__h2">
+          <h1 class="inicio__h1">
             I.T.C Hernando navia varón, 50 años sembrando futuro
-          </h2>
+          </h1>
           <p class="inicio__p">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores
             numquam distinctio libero quas voluptatibus.
@@ -84,7 +81,35 @@
         </div>
       </section>
       <!-- home section ends -->
-      <section id="nosotros" class="nosotros"></section>
+
+      <!-- Nosotros section starts  -->
+      <section id="nosotros" class="nosotros__section">
+        <h2 class="nosotros__h2">Nosotros</h2>
+        <div class="nosotros__content">
+          <article class="nosotros__article">
+            <h3 class="nosotros__h3">Afrocolombianidad</h3>
+            <img src="/assets/imagenes/ferias_img.webp" alt="" />
+            <p class="nosotros__p">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. In esse
+              consectetur a minima eos fugiat neque eligendi aspernatur rem
+              voluptate repellat hic voluptatem, architecto consequuntur
+              voluptatum quasi temporibus. Maxime, labore.
+            </p>
+          </article>
+          <article class="nosotros__article">
+            <h3 class="nosotros__h3">Afrocolombianidad</h3>
+            <img src="/assets/imagenes/ferias_img.webp" alt="" />
+            <p class="nosotros__p">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. In esse
+              consectetur a minima eos fugiat neque eligendi aspernatur rem
+              voluptate repellat hic voluptatem, architecto consequuntur
+              voluptatum quasi temporibus. Maxime, labore.
+            </p>
+          </article>
+        </div>
+      </section>
+      <!-- Nosotros section ends -->
+
       <section id="proyectos" class="proyectos"></section>
       <section id="contactenos" class="contactenos"></section>
     </main>
