Se elimino el titulo nosotros

--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
 
       <!-- Nosotros section starts  -->
       <section id="nosotros" class="nosotros__section">
-        <h2 class="nosotros__h2">Nosotros</h2>
+        <!-- <h2 class="nosotros__h2">Nosotros</h2> -->
         <div class="nosotros__content">
           <article class="nosotros__article">
-            <h3 class="nosotros__h3">Afrocolombianidad</h3>
+            <h2 class="nosotros__h2">Afrocolombianidad</h2>
             <img src="/assets/imagenes/ferias_img.webp" alt="" />
             <p class="nosotros__p">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. In esse
@@ -97,7 +97,7 @@
             </p>
           </article>
           <article class="nosotros__article">
-            <h3 class="nosotros__h3">Afrocolombianidad</h3>
+            <h2 class="nosotros__h2">Afrocolombianidad</h2>
             <img src="/assets/imagenes/ferias_img.webp" alt="" />
             <p class="nosotros__p">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. In esse
