Se avanzo en el 80% en la section__nosotro

--- a/index.html
+++ b/index.html
@@ -84,29 +84,34 @@
 
       <!-- Nosotros section starts  -->
       <section id="nosotros" class="nosotros__section">
-        <!-- <h2 class="nosotros__h2">Nosotros</h2> -->
-        <div class="nosotros__content">
-          <article class="nosotros__article">
-            <h2 class="nosotros__h2">Afrocolombianidad</h2>
-            <img src="/assets/imagenes/ferias_img.webp" alt="" />
-            <p class="nosotros__p">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. In esse
-              consectetur a minima eos fugiat neque eligendi aspernatur rem
-              voluptate repellat hic voluptatem, architecto consequuntur
-              voluptatum quasi temporibus. Maxime, labore.
-            </p>
-          </article>
-          <article class="nosotros__article">
-            <h2 class="nosotros__h2">Afrocolombianidad</h2>
-            <img src="/assets/imagenes/ferias_img.webp" alt="" />
-            <p class="nosotros__p">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. In esse
-              consectetur a minima eos fugiat neque eligendi aspernatur rem
-              voluptate repellat hic voluptatem, architecto consequuntur
-              voluptatum quasi temporibus. Maxime, labore.
-            </p>
-          </article>
-        </div>
+        <article class="nosotros__article">
+          <h2 class="nosotros__h2">Nuestro impacto</h2>
+          <img
+            class="nosotros__img"
+            src="/assets/imagenes/nuestro_impacto_img.webp"
+            alt="img--Mujer-Afro"
+          />
+          <p class="nosotros__p nosotros--padding">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. In esse
+            consectetur a minima eos fugiat neque eligendi aspernatur rem
+            voluptate repellat hic voluptatem, architecto consequuntur
+            voluptatum quasi temporibus. Maxime, labore.
+          </p>
+        </article>
+        <article class="nosotros__article">
+          <h2 class="nosotros__h2">Ferias</h2>
+          <p class="nosotros__p">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. In esse
+            consectetur a minima eos fugiat neque eligendi aspernatur rem
+            voluptate repellat hic voluptatem, architecto consequuntur
+            voluptatum quasi temporibus. Maxime, labore.
+          </p>
+          <img
+            class="nosotros__img nosotros--padding"
+            src="/assets/imagenes/ferias_img.webp"
+            alt="img-Personas-festejando"
+          />
+        </article>
       </section>
       <!-- Nosotros section ends -->
 
