Se avanzo en la sección proyectos

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </a>
         <ul id="header__ul" class="header__ul">
           <li class="header__li">
-            <a class="header__a header__a--efec" href="#inicio">Inicio</a>
+            <a class="header__a header__a--efec" href="#home">Inicio</a>
           </li>
 
           <li class="header__li">
@@ -69,12 +69,12 @@
 
     <main class="main">
       <!-- home section starts  -->
-      <section id="inicio" class="inicio inicio--gradien">
-        <div class="inicio__content">
-          <h1 class="inicio__h1">
+      <section id="home" class="home home--gradien">
+        <div class="home__content">
+          <h1 class="home__title">
             I.T.C Hernando navia varón, 50 años sembrando futuro
           </h1>
-          <p class="inicio__p">
+          <p class="home__text">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores
             numquam distinctio libero quas voluptatibus.
           </p>
@@ -83,31 +83,31 @@
       <!-- home section ends -->
 
       <!-- Nosotros section starts  -->
-      <section id="nosotros" class="nosotros__section">
-        <article class="nosotros__article">
-          <h2 class="nosotros__h2">Nuestro impacto</h2>
+      <section id="nosotros" class="section section--flex">
+        <article class="section__article">
+          <h2 class="section__title section__title--big">Nuestro impacto</h2>
           <img
-            class="nosotros__img"
+            class="section__img"
             src="/assets/imagenes/nuestro_impacto_img.webp"
             alt="img--Mujer-Afro"
           />
-          <p class="nosotros__p nosotros--padding">
+          <p class="section__text section--padding">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. In esse
             consectetur a minima eos fugiat neque eligendi aspernatur rem
             voluptate repellat hic voluptatem, architecto consequuntur
             voluptatum quasi temporibus. Maxime, labore.
           </p>
         </article>
-        <article class="nosotros__article">
-          <h2 class="nosotros__h2">Ferias</h2>
-          <p class="nosotros__p">
+        <article class="section__article">
+          <h2 class="section__title section__title--big">Ferias</h2>
+          <p class="section__text">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. In esse
             consectetur a minima eos fugiat neque eligendi aspernatur rem
             voluptate repellat hic voluptatem, architecto consequuntur
             voluptatum quasi temporibus. Maxime, labore.
           </p>
           <img
-            class="nosotros__img nosotros--padding"
+            class="section__img section--padding"
             src="/assets/imagenes/ferias_img.webp"
             alt="img-Personas-festejando"
           />
@@ -115,7 +115,43 @@
       </section>
       <!-- Nosotros section ends -->
 
-      <section id="proyectos" class="proyectos"></section>
+      <!-- Proyectos section starts  -->
+      <section id="proyectos" class="section section--color section--grid ">
+        <article class="section__article section__article--border">
+          <img src="/assets/imagenes/afro.webp" alt="" />
+          <div class="section__content">
+            <h2 class="section__title">Afrocolombianidad</h2>
+            <p class="section__text">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
+              natus amet doloremque accusamus alias harum a reiciendis.
+            </p>
+          </div>
+        </article>
+
+        <article class="section__article section__article--border">
+          <img src="/assets/imagenes/ciencia.webp" alt="" />
+          <div class="section__content">
+            <h2 class="section__title">Semana de la ciencia</h2>
+            <p class="section__text">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
+              natus amet doloremque accusamus alias harum a reiciendis.
+            </p>
+          </div>
+        </article>
+
+        <article class="section__article section__article--border">
+          <img src="/assets/imagenes/empresaciarales.webp" alt="" />
+          <div class="section__content">
+            <h2 class="section__title">Semana de la innovación</h2>
+            <p class="section__text">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
+              natus amet doloremque accusamus alias harum a reiciendis.
+            </p>
+          </div>
+        </article>
+      </section>
+      <!-- Proyectos section ends  -->
+
       <section id="contactenos" class="contactenos"></section>
     </main>
 
