Se agregaron botones a section__proyectos

--- a/index.html
+++ b/index.html
@@ -116,37 +116,63 @@
       <!-- Nosotros section ends -->
 
       <!-- Proyectos section starts  -->
-      <section id="proyectos" class="section section--color section--grid ">
+      <section id="proyectos" class="section section--color section--grid">
         <article class="section__article section__article--border">
-          <img src="/assets/imagenes/afro.webp" alt="" />
+          <img src="/assets/imagenes/afro.webp" alt="Escuela-afro" />
           <div class="section__content">
-            <h2 class="section__title">Afrocolombianidad</h2>
+            <h2 class="section__title section__title--break">
+              Afrocolombianidad
+            </h2>
             <p class="section__text">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
               natus amet doloremque accusamus alias harum a reiciendis.
             </p>
+            <button class="section__button">
+              <span
+                ><i class="fa-solid fa-book-open-reader section__button-img"></i
+              ></span>
+              Leermas
+            </button>
           </div>
         </article>
 
         <article class="section__article section__article--border">
-          <img src="/assets/imagenes/ciencia.webp" alt="" />
+          <img
+            src="/assets/imagenes/ciencia.webp"
+            alt="practicas-de-laboratorio"
+          />
           <div class="section__content">
             <h2 class="section__title">Semana de la ciencia</h2>
             <p class="section__text">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
               natus amet doloremque accusamus alias harum a reiciendis.
             </p>
+            <button class="section__button">
+              <span
+                ><i class="fa-solid fa-book-open-reader section__button-img"></i
+              ></span>
+              Leermas
+            </button>
           </div>
         </article>
 
         <article class="section__article section__article--border">
-          <img src="/assets/imagenes/empresaciarales.webp" alt="" />
+          <img
+            src="/assets/imagenes/empresaciarales.webp"
+            alt="feria-de-comida"
+          />
           <div class="section__content">
             <h2 class="section__title">Semana de la innovación</h2>
             <p class="section__text">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
               natus amet doloremque accusamus alias harum a reiciendis.
             </p>
+            <button class="section__button">
+              <span
+                ><i class="fa-solid fa-book-open-reader section__button-img"></i
+              ></span>
+              Leermas
+            </button>
           </div>
         </article>
       </section>
