Se aplico transtion a los button

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
       <!-- Proyectos section starts  -->
       <section id="proyectos" class="section section--color section--grid">
         <article class="section__article section__article--border">
+          
           <img src="/assets/imagenes/afro.webp" alt="Escuela-afro" />
           <div class="section__content">
             <h2 class="section__title section__title--break">
@@ -127,11 +128,11 @@
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
               natus amet doloremque accusamus alias harum a reiciendis.
             </p>
-            <button class="section__button">
+            <button class="section__button section__button--efect">
               <span
                 ><i class="fa-solid fa-book-open-reader section__button-img"></i
               ></span>
-              Leermas
+              Leermas...
             </button>
           </div>
         </article>
@@ -147,11 +148,11 @@
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
               natus amet doloremque accusamus alias harum a reiciendis.
             </p>
-            <button class="section__button">
+            <button class="section__button section__button--efect">
               <span
                 ><i class="fa-solid fa-book-open-reader section__button-img"></i
               ></span>
-              Leermas
+              Leermas...
             </button>
           </div>
         </article>
@@ -167,11 +168,11 @@
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
               natus amet doloremque accusamus alias harum a reiciendis.
             </p>
-            <button class="section__button">
+            <button class="section__button section__button--efect">
               <span
                 ><i class="fa-solid fa-book-open-reader section__button-img"></i
               ></span>
-              Leermas
+              Leermas...
             </button>
           </div>
         </article>
