se midifico section__article por section__card

--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
       <!-- Nosotros section starts  -->
       <section id="nosotros" class="section section--flex">
         <article class="section__article">
-          <h2 class="section__title section__title--big">Nuestro impacto</h2>
+          <h2 class="section__title section__title--big">Visión y Misión</h2>
           <img
             class="section__img"
             src="/assets/imagenes/nuestro_impacto_img.webp"
             alt="img--Mujer-Afro"
           />
-          <p class="section__text section--padding">
+          <p class="section__text">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. In esse
             consectetur a minima eos fugiat neque eligendi aspernatur rem
             voluptate repellat hic voluptatem, architecto consequuntur
@@ -107,7 +107,7 @@
             voluptatum quasi temporibus. Maxime, labore.
           </p>
           <img
-            class="section__img section--padding"
+            class="section__img"
             src="/assets/imagenes/ferias_img.webp"
             alt="img-Personas-festejando"
           />
@@ -117,12 +117,10 @@
 
       <!-- Proyectos section starts  -->
       <section id="proyectos" class="section section--color section--grid">
-        <article class="section__article section__article--border">
-          
-          <img src="/assets/imagenes/afro.webp" alt="Escuela-afro" />
-          <div class="section__content">
-            <h2 class="section__title section__title--break">
-              Afrocolombianidad
+        <article
+          class="section__card section__article--border section__card--teatro  "  >
+            <h2 class="section__title">
+              Teatro
             </h2>
             <p class="section__text">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
@@ -136,14 +134,12 @@
             </button>
           </div>
         </article>
-
-        <article class="section__article section__article--border">
-          <img
-            src="/assets/imagenes/ciencia.webp"
-            alt="practicas-de-laboratorio"
-          />
-          <div class="section__content">
-            <h2 class="section__title">Semana de la ciencia</h2>
+        <article
+          class="section__card section__article--border section__card--deporte "
+        >
+            <h2 class="section__title">
+              Deportes
+            </h2>
             <p class="section__text">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
               natus amet doloremque accusamus alias harum a reiciendis.
@@ -156,14 +152,31 @@
             </button>
           </div>
         </article>
-
-        <article class="section__article section__article--border">
-          <img
-            src="/assets/imagenes/empresaciarales.webp"
-            alt="feria-de-comida"
-          />
-          <div class="section__content">
-            <h2 class="section__title">Semana de la innovación</h2>
+        <article
+          class="section__card section__article--border section__card--emprendimiento  "
+        >
+          
+            <h2 class="section__title">
+              Empredimiento
+            </h2>
+            <p class="section__text">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
+              natus amet doloremque accusamus alias harum a reiciendis.
+            </p>
+            <button class="section__button section__button--efect">
+              <span
+                ><i class="fa-solid fa-book-open-reader section__button-img"></i
+              ></span>
+              Leermas...
+            </button>
+          </div>
+        </article>
+        <article
+          class="section__card section__article--border section__card--lectura   "
+        >
+            <h2 class="section__title">
+              Lectura y escritura
+            </h2>
             <p class="section__text">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
               natus amet doloremque accusamus alias harum a reiciendis.
