Se aplico efecto a las card

--- a/index.html
+++ b/index.html
@@ -118,11 +118,13 @@
       <!-- Proyectos section starts  -->
       <section id="proyectos" class="section section--color section--grid">
         <article
-          class="section__card section__article--border section__card--teatro  "  >
-            <h2 class="section__title">
-              Teatro
-            </h2>
-            <p class="section__text">
+          class="section__card section__article--border section__card--teatro"
+        >
+          <img src="/assets/imagenes/teatro.jpg" alt="" />
+
+          <div class="section-image-data">
+            <h2 class="section__title section__title--card">Teatro</h2>
+            <p class="section__text section__text--card">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
               natus amet doloremque accusamus alias harum a reiciendis.
             </p>
@@ -134,13 +136,15 @@
             </button>
           </div>
         </article>
+
         <article
-          class="section__card section__article--border section__card--deporte "
+          class="section__card section__article--border section__card--teatro"
         >
-            <h2 class="section__title">
-              Deportes
-            </h2>
-            <p class="section__text">
+          <img src="/assets/imagenes/basquetbol.jpg" alt="" />
+
+          <div class="section-image-data">
+            <h2 class="section__title section__title--card">Deporte</h2>
+            <p class="section__text section__text--card">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
               natus amet doloremque accusamus alias harum a reiciendis.
             </p>
@@ -152,14 +156,15 @@
             </button>
           </div>
         </article>
+
         <article
-          class="section__card section__article--border section__card--emprendimiento  "
+          class="section__card section__article--border section__card--teatro"
         >
-          
-            <h2 class="section__title">
-              Empredimiento
-            </h2>
-            <p class="section__text">
+          <img src="/assets/imagenes/emprendimiento.jpg" alt="" />
+
+          <div class="section-image-data">
+            <h2 class="section__title section__title--card">Emprendimiento</h2>
+            <p class="section__text section__text--card">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
               natus amet doloremque accusamus alias harum a reiciendis.
             </p>
@@ -171,13 +176,17 @@
             </button>
           </div>
         </article>
+
         <article
-          class="section__card section__article--border section__card--lectura   "
+          class="section__card section__article--border section__card--teatro"
         >
-            <h2 class="section__title">
+          <img src="/assets/imagenes/lectura.jpg" alt="" />
+
+          <div class="section-image-data">
+            <h2 class="section__title section__title--card">
               Lectura y escritura
             </h2>
-            <p class="section__text">
+            <p class="section__text section__text--card">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
               natus amet doloremque accusamus alias harum a reiciendis.
             </p>
