se aplico  --textSize-M al card--title

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
           <div class="section-image-data">
             <h2 class="section__title section__title--card">
-              Lectura y escritura
+              Lectoescritura
             </h2>
             <p class="section__text section__text--card">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
