Se agrego backgroun-img a las section-card

--- a/index.html
+++ b/index.html
@@ -120,8 +120,7 @@
         <article
           class="section__card section__article--border section__card--teatro"
         >
-          <img src="/assets/imagenes/teatro.jpg" alt="" />
-
+      
           <div class="section-image-data">
             <h2 class="section__title section__title--card">Teatro</h2>
             <p class="section__text section__text--card">
@@ -138,10 +137,9 @@
         </article>
 
         <article
-          class="section__card section__article--border section__card--teatro"
+          class="section__card section__article--border section__card--deporte"
         >
-          <img src="/assets/imagenes/basquetbol.jpg" alt="" />
-
+        
           <div class="section-image-data">
             <h2 class="section__title section__title--card">Deporte</h2>
             <p class="section__text section__text--card">
@@ -158,9 +156,9 @@
         </article>
 
         <article
-          class="section__card section__article--border section__card--teatro"
+          class="section__card section__article--border section__card--emprendimiento"
         >
-          <img src="/assets/imagenes/emprendimiento.jpg" alt="" />
+          <!-- <img src="/assets/imagenes/emprendimiento.jpg" alt="" /> -->
 
           <div class="section-image-data">
             <h2 class="section__title section__title--card">Emprendimiento</h2>
@@ -178,9 +176,9 @@
         </article>
 
         <article
-          class="section__card section__article--border section__card--teatro"
+          class="section__card section__article--border section__card--lectoescritura"
         >
-          <img src="/assets/imagenes/lectura.jpg" alt="" />
+          <!-- <img src="/assets/imagenes/lectura.jpg" alt="" /> -->
 
           <div class="section-image-data">
             <h2 class="section__title section__title--card">
